# svg_utils

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .travis.yml  Bubble sort.txt  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  README  README.rst  RELEASE.rst  firstLast.java  heap sort.txt  linear serach.txt  mergesort.txt  pyproject.toml  quicksort.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: black.yml  pre-commit-detect-outdated.yml  pre-commit-run.yml  python-publish.yml  run-tests.yml
binarytree/: binarytree.py
docs/: Makefile
docs/source/: compose.rst  conf.py  getting_started.rst  index.rst  reference.rst  transform.rst  tutorials.rst
docs/source/tutorial/: sigmoid_fit.py  tutorial.rst
docs/source/tutorials/: anscombe.py  composing_multipanel_figures.rst  fig_compose.py  fig_final.py  getting_started.rst  publication_quality_figures.rst
docs/source/tutorials/figures/: Makefile
docs/source/tutorials/scripts/: anscombe.py  composing_multipanel_figures_examples.py  fig_compose.py  fig_final.py  sigmoid_fit.py
examples/: compose_example.py  compose_scaling.py  stack_plots.py  stack_svg.py
src/: transform.py
src/svgutils/: __init__.py  common.py  compose.py  templates.py  transform.py  util.py
tests/: .circle.svg.swp  .test_transform.py.swp  letter_spacing.py  test_compose.py  test_transform.py
