[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "svgutils"
version = "0.3.4"
authors = [{name = "Bartosz Telenczuk", email = "bartosz.telenczuk@gmail.com"}]
description = "Python SVG editor"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.6"
dependencies = ["lxml"]

[project.readme]
text = """
This is an utility package that helps to edit and
concatenate SVG files. It is especially directed at scientists preparing
final figures for submission to journal. So far it supports arbitrary
placement and scaling of svg figures and
adding markers, such as labels."""
content-type = "text/plain"

[project.urls]
Homepage = "https://svgutils.readthedocs.io"
"Source Code" = "https://github.com/btel/svg_utils/"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["svgutils"]
include-package-data = false
